Header and Footer

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,8 @@
-<mat-toolbar color="primary">
+<!-- <mat-toolbar color="primary">
   <span>Ristorante Con Fusion</span>
 </mat-toolbar>
 <app-menu></app-menu>
-<router-outlet></router-outlet>
+<router-outlet></router-outlet> -->
+<app-header></app-header>
+<app-menu></app-menu>
+<app-footer></app-footer>
