--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,3 @@
-<!-- <mat-toolbar color="primary">
-  <span>Ristorante Con Fusion</span>
-</mat-toolbar>
-<app-menu></app-menu>
-<router-outlet></router-outlet> -->
 <app-header></app-header>
-<app-menu></app-menu>
+<router-outlet></router-outlet>
 <app-footer></app-footer>
