--- a/src/app/dishdetail/dishdetail.component.html
+++ b/src/app/dishdetail/dishdetail.component.html
@@ -1,11 +1,16 @@
 <div class="container"
-    fxLayout="row"
+    fxLayout="row wrap"
     fxLayout.sm="column"
     fxLayout.xs="column"
     fxLayoutAlign.gt-md="space-around center"
     fxLayoutGap="10px"
-    fxLayoutGap.xs="0"
-    *ngIf="dish">
+    fxLayoutGap.xs="0">
+    <div fxFlex="100">
+      <div>
+        <h3>{{dish.name | uppercase}}</h3>
+        <hr>
+      </div>
+    </div>
   <div fxFlex="40">
     <mat-card>
       <mat-card-header>
@@ -19,6 +24,7 @@
         </p>
       </mat-card-content>
       <mat-card-actions>
+          <button mat-button (click)="goBack()">BACK</button>
         <button mat-button>LIKE</button>
         <button mat-button>SHARE</button>
       </mat-card-actions>
